# InstaUnfollowerFinder

./: .gitignore  README.md  build_macos.spec  cli.py  gui.py  icon.icns  main.py  pyproject.toml  requirements.txt  utils.py  whitelist.json
.github/workflows/: compile.yml  get_spec.yml
docs/: COMPILED_GUIDE.md  FAQ.md  INSTAGRAM_DATA_GUIDE.md  SOURCE_CODE_GUIDE.md
src/: cli.py  cli_utils.py  gui.py  utils.py
src/instaunfollowerfinder/: cli.py  gui.py  utils.py
