[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "INSTA_UNFOLLOWER_FINDER"
authors = [
    { name = "Simone Vinciguerra" }
]
dependencies = [
    "colorama", 
    "customtkinter",
    "requests"
]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/SmartsvXD/InstaUnfollowerFinder"
Issues = "https://github.com/SmartsvXD/InstaUnfollowerFinder/issues"

[tool.setuptools.package-data]
"INSTA_UNFOLLOWER_FINDER" = ["*.json", "*.spec", "*.ico"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"